tests/sketchy_null_default/sketchy_null_default.exp
Error: test.js:20
 20: x2 = x2 || true;
          ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   19: var x2: ?boolean = null;
               ^^^^^^^^ Potentially null/undefined value.
   19: var x2: ?boolean = null;
                ^^^^^^^ Potentially false value.

Error: test.js:23
 23: y2 = y2 || 1;
          ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   22: var y2: ?number = null;
               ^^^^^^^ Potentially null/undefined value.
   22: var y2: ?number = null;
                ^^^^^^ Potentially 0 value.

Error: test.js:26
 26: z2 = z2 || 'foo';
          ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   25: var z2: ?string = null;
               ^^^^^^^ Potentially null/undefined value.
   25: var z2: ?string = null;
                ^^^^^^ Potentially "" value.

Error: test.js:32
 32: a1 = a1 || false;
          ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   31: var a1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   31: var a1: boolean | number | string | null = null;
                         ^^^^^^ Potentially 0 value.

Error: test.js:32
 32: a1 = a1 || false;
          ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   31: var a1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   31: var a1: boolean | number | string | null = null;
                                  ^^^^^^ Potentially "" value.

Error: test.js:35
 35: b1 = b1 || 0;
          ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   34: var b1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   34: var b1: boolean | number | string | null = null;
               ^^^^^^^ Potentially false value.

Error: test.js:35
 35: b1 = b1 || 0;
          ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   34: var b1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   34: var b1: boolean | number | string | null = null;
                                  ^^^^^^ Potentially "" value.

Error: test.js:38
 38: c1 = c1 || '';
          ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   37: var c1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   37: var c1: boolean | number | string | null = null;
               ^^^^^^^ Potentially false value.

Error: test.js:38
 38: c1 = c1 || '';
          ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   37: var c1: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   37: var c1: boolean | number | string | null = null;
                         ^^^^^^ Potentially 0 value.

Error: test.js:58
 58: if (x4 || true) {}
         ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   57: var x4: ?boolean = null;
               ^^^^^^^^ Potentially null/undefined value.
   57: var x4: ?boolean = null;
                ^^^^^^^ Potentially false value.

Error: test.js:61
 61: if (y4 || false) {}
         ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   60: var y4: ?number = null;
               ^^^^^^^ Potentially null/undefined value.
   60: var y4: ?number = null;
                ^^^^^^ Potentially 0 value.

Error: test.js:64
 64: if (z4 || 'foo') {}
         ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   63: var z4: ?string = null;
               ^^^^^^^ Potentially null/undefined value.
   63: var z4: ?string = null;
                ^^^^^^ Potentially "" value.

Error: test.js:70
 70: if (a2 || false) {}
         ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   69: var a2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   69: var a2: boolean | number | string | null = null;
                         ^^^^^^ Potentially 0 value.

Error: test.js:70
 70: if (a2 || false) {}
         ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   69: var a2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   69: var a2: boolean | number | string | null = null;
                                  ^^^^^^ Potentially "" value.

Error: test.js:73
 73: if (b2 || 0) {}
         ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   72: var b2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   72: var b2: boolean | number | string | null = null;
               ^^^^^^^ Potentially false value.

Error: test.js:73
 73: if (b2 || 0) {}
         ^^ Sketchy null check on string value. Perhaps you meant to check for null instead of for existence?
   72: var b2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   72: var b2: boolean | number | string | null = null;
                                  ^^^^^^ Potentially "" value.

Error: test.js:76
 76: if (c2 || '') {}
         ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   75: var c2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   75: var c2: boolean | number | string | null = null;
               ^^^^^^^ Potentially false value.

Error: test.js:76
 76: if (c2 || '') {}
         ^^ Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
   75: var c2: boolean | number | string | null = null;
                                           ^^^^ Potentially null/undefined value.
   75: var c2: boolean | number | string | null = null;
                         ^^^^^^ Potentially 0 value.

Error: test.js:82
 82: d1 = (d1 || e1) || false; //Both checks are sketchy. (This is how it gets parsed without the parentheses)
           ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   80: var d1: ?boolean = null;
               ^^^^^^^^ Potentially null/undefined value.
   80: var d1: ?boolean = null;
                ^^^^^^^ Potentially false value.

Error: test.js:82
 82: d1 = (d1 || e1) || false; //Both checks are sketchy. (This is how it gets parsed without the parentheses)
                 ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   81: var e1: ?boolean = true;
               ^^^^^^^^ Potentially null/undefined value.
   81: var e1: ?boolean = true;
                ^^^^^^^ Potentially false value.

Error: test.js:86
 86: d2 = d2 || (e2 || false); //Only d2 is sketchy; e2 matches the default pattern.
          ^^ Sketchy null check on boolean value. Perhaps you meant to check for null instead of for existence?
   84: var d2: ?boolean = null;
               ^^^^^^^^ Potentially null/undefined value.
   84: var d2: ?boolean = null;
                ^^^^^^^ Potentially false value.


Found 21 errors
